--- a/app/views/_layouts/email.html
+++ b/app/views/_layouts/email.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main.html" %}
+{% extends "_layouts/main.html" %}
 {% set htmlClasses = "app-email" %}
 {% set bodyClasses = "app-email__body" %}
 {% set containerClasses = "app-email__header-and-message-container" %}
