--- a/app/views/_layouts/forms-interrupt.html
+++ b/app/views/_layouts/forms-interrupt.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms.html" %}
+{% extends "_layouts/forms.html" %}
 {% block content %}
   <div class="govuk-panel app-panel--interruption">
     <div class="govuk-grid-row">
