--- a/app/views/account/name.html
+++ b/app/views/account/name.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms.html" %}
+{% extends "_layouts/forms.html" %}
 {% set title %}Your name{% endset %}
 {% set signedIn = 'true' %}
 {% set formAction = '' %}
