--- a/app/views/account/phone-code.html
+++ b/app/views/account/phone-code.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms.html" %}
+{% extends "_layouts/forms.html" %}
 {% set title %}Check your phone{% endset %}
 {% set auth = 'true' %}
 {% set signedIn = 'true' %}
