--- a/app/views/auth/change-email-request.html
+++ b/app/views/auth/change-email-request.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms.html" %}
+{% extends "_layouts/forms.html" %}
 
 {% set title = "You need to prove your identity to change your email address" %}
 {% set hideButton = true %}
