--- a/app/views/auth/date-of-birth.html
+++ b/app/views/auth/date-of-birth.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms.html" %}
+{% extends "_layouts/forms.html" %}
 {% set title %}Your date of birth{% endset %}
 
 {% block form %}
