--- a/app/views/auth/emails/qts-email.html
+++ b/app/views/auth/emails/qts-email.html
@@ -1,4 +1,4 @@
-{% extends "layouts/email.html" %}
+{% extends "_layouts/email.html" %}
 
 {% set subject = "Your QTS application was successful" %}
 
