--- a/app/views/auth/ga-account.html
+++ b/app/views/auth/ga-account.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms-interrupt.html" %}
+{% extends "_layouts/forms-interrupt.html" %}
 {% set hideButton = true %}
 {% set accountPath = data['createAccountURL'] or '/user-research/qual/create-account'%}
 {% set signIn = data['signInAccountURL'] or '/user-research/qts/sign-in'%}
