--- a/app/views/auth/have-nino.html
+++ b/app/views/auth/have-nino.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms.html" %}
+{% extends "_layouts/forms.html" %}
 {% set title %}Do you have a National Insurance number?{% endset %}
 
 {% block form %}
