--- a/app/views/auth/have-qts.html
+++ b/app/views/auth/have-qts.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms.html" %}
+{% extends "_layouts/forms.html" %}
 {% set title %}Have you been awarded qualified teacher status (QTS)?{% endset %}
 
 {% block form %}
