--- a/app/views/auth/name.html
+++ b/app/views/auth/name.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms.html" %}
+{% extends "_layouts/forms.html" %}
 {% set title %}Change the name we have for you in our records{% endset %}
 {% set signedIn = 'false' %}
 
