--- a/app/views/auth/resend-email.html
+++ b/app/views/auth/resend-email.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms.html" %}
+{% extends "_layouts/forms.html" %}
 {% set title %}Request a new email code{% endset %}
 {% set buttonText %}Request a new email code{% endset %}
 
