--- a/app/views/auth/sign-in-interstitial.html
+++ b/app/views/auth/sign-in-interstitial.html
@@ -1,5 +1,5 @@
 {% set buttonText %}Sign in{% endset %}
-{% extends "layouts/forms.html" %}
+{% extends "_layouts/forms.html" %}
 {% set title %}Sign in to your {{ data.tsa }}{% endset %}
 
 {% set deviceMatch %}
