--- a/app/views/auth/start.html
+++ b/app/views/auth/start.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main.html" %}
+{% extends "_layouts/main.html" %}
 
 {% block pageTitle %}
 Apply for qualified teacher status (QTS) in England
