--- a/app/views/legal/privacy-notice.html
+++ b/app/views/legal/privacy-notice.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms.html" %}
+{% extends "_layouts/forms.html" %}
 {% set title %}Privacy notice{% endset %}
 {% set hideButton = true %}
 
