--- a/app/views/qts/create-account-sign-in.html
+++ b/app/views/qts/create-account-sign-in.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms-qts.html" %}
+{% extends "_layouts/forms-qts.html" %}
 {% set title %}Check your eligibility to apply for qualified teacher status (QTS) in England{% endset %}
 
 
