--- a/app/views/qts/eligibility/question-country.html
+++ b/app/views/qts/eligibility/question-country.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms-qts.html" %}
+{% extends "_layouts/forms-qts.html" %}
 {% set title %}In which country are you currently recognised as a teacher?{% endset %}
 
 
