--- a/app/views/qts/eligibility/question-degree.html
+++ b/app/views/qts/eligibility/question-degree.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms-qts.html" %}
+{% extends "_layouts/forms-qts.html" %}
 {% set title %}Do you have a university degree?{% endset %}
 
 
