--- a/app/views/qts/eligibility/question-prioritised-subjects.html
+++ b/app/views/qts/eligibility/question-prioritised-subjects.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms-qts.html" %}
+{% extends "_layouts/forms-qts.html" %}
 {% set title %}Does your teaching qualification show that you can teach one of the following subjects?{% endset %}
 
 
