--- a/app/views/qts/eligibility/question-special-educational-needs.html
+++ b/app/views/qts/eligibility/question-special-educational-needs.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms-qts.html" %}
+{% extends "_layouts/forms-qts.html" %}
 {% set title %}Are you qualified to teach children who are aged somewhere between 5 and 16 years?{% endset %}
 
 
