--- a/app/views/_layouts/forms-qts.html
+++ b/app/views/_layouts/forms-qts.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main.html" %}
+{% extends "_layouts/main.html" %}
 {% set formActionHtml %}
   {%- if formAction -%}
     action={{- formAction -}}
@@ -14,7 +14,7 @@
 {% set serviceNameTsa = data.tsa %}
 
 {% block beforeContent %}
-{% include 'includes/back.html' %}
+{% include '_includes/back.html' %}
 {% endblock %}
 
 
