--- a/app/views/_layouts/forms.html
+++ b/app/views/_layouts/forms.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main.html" %}
+{% extends "_layouts/main.html" %}
 {% set formActionHtml %}
   {%- if formAction -%}
     action={{- formAction -}}
@@ -8,7 +8,7 @@
 
 
 {% block beforeContent %}
-{% include 'includes/back.html' %}
+{% include '_includes/back.html' %}
 {% endblock %}
 
 
