--- a/app/views/account/check-answers.html
+++ b/app/views/account/check-answers.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms.html" %}
+{% extends "_layouts/forms.html" %}
 {% set title = 'Confirm change' %}
 {% set signedIn = 'true' %}
 {% set buttonText = 'Submit change' %}
