--- a/app/views/account/date-of-birth-dqt.html
+++ b/app/views/account/date-of-birth-dqt.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms.html" %}
+{% extends "_layouts/forms.html" %}
 {% set title = 'Your date of birth' %}
 {% set signedIn = 'true' %}
 {% set notFullWidth = true %}
