--- a/app/views/account/dob-dqt-overview.html
+++ b/app/views/account/dob-dqt-overview.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms.html" %}
+{% extends "_layouts/forms.html" %}
 {% set title = 'Change date of birth' %}
 {% set signedIn = 'true' %}
 {% set notFullWidth = true %}
