--- a/app/views/account/dob-dqt.html
+++ b/app/views/account/dob-dqt.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms.html" %}
+{% extends "_layouts/forms.html" %}
 {% set title = 'Date of birth' %}
 {% set signedIn = 'true' %}
 {% set backlink = true %}
