--- a/app/views/account/email-code.html
+++ b/app/views/account/email-code.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms.html" %}
+{% extends "_layouts/forms.html" %}
 {% set title %}Confirm your email address{% endset %}
 {% set signedIn = 'true' %}
 {% set account  = 'true' %}
