--- a/app/views/account/phone.html
+++ b/app/views/account/phone.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms.html" %}
+{% extends "_layouts/forms.html" %}
 {% set title %}Your mobile number{% endset %}
 {% set phone = '07827235233' %}
 {% set signedIn = 'true' %}
