--- a/app/views/account/resend-phone.html
+++ b/app/views/account/resend-phone.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms.html" %}
+{% extends "_layouts/forms.html" %}
 {% set title %}Request a mobile security code{% endset %}
 {% set buttonText = 'Request security code' %}
 
