--- a/app/views/account/signed-out.html
+++ b/app/views/account/signed-out.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms.html" %}
+{% extends "_layouts/forms.html" %}
 {% set title %}Signed out{% endset %}
 {% set hideButton = "true" %}
 {% set hideBackLink = "true" %}
