--- a/app/views/auth/_phone-code.html
+++ b/app/views/auth/_phone-code.html
@@ -1,17 +1,13 @@
-{% set phonehtml %}
-  
+{% set phone %}
   {%- if signIn -%}
-    {{' ' + data.phone | maskPhoneNumber if data['phone'] else '**** ** 9615' }}
-
+    {{ (data.user.phone or data.defaultData.phone) | maskPhoneNumber }}
   {%- else -%}
-    {{' ' + data.phone if data['phone'] else '07827999615' }}
-
+    {{ data.user.phone or data.defaultData.phone }}
   {%- endif -%}
-
 {% endset -%}
 
 
-<p>We’ve sent you a text message with a security code to <strong>{{phonehtml}}</strong></p>
+<p>We’ve sent you a text message with a security code to <strong>{{phone}}</strong></p>
 
 {{ govukInput({
   label: {
@@ -25,15 +21,15 @@
 
 {%- if auth or account -%}
   <p>
-    <a href="/auth/resend-phone">I have not received an text message</a>
+    <a href="/auth/resend-phone">I have not received a text message</a>
   </p>
 {%- elseif signIn -%}
   <p>
-    <a href="/sign-in/resend-phone">I have not received an text message</a>
+    <a href="/sign-in/resend-phone">I have not received a text message</a>
   </p>
 
   <p>
-    <a href="/auth/change-email-request">I can't access this mobile number</a>
+    <a href="/auth/change-email-request">I cannot access this mobile number</a>
   </p>
 {%- endif -%}
 
