--- a/app/views/auth/_phone.html
+++ b/app/views/auth/_phone.html
@@ -5,10 +5,10 @@
 {%- endif -%}
 
   {{ govukInput({
-    id: "[phone]",
-    name: "[phone]",
+    id: "phone",
+    name: "[user][phone]",
     label: {
-      text: "Mobile number ",
+      text: "Mobile number",
       classes: "govuk-label--s"
     },
     type: "tel",
@@ -16,5 +16,6 @@
     hint: {
       html: "For international numbers include the country code"
     },
-    value: data['phone'] or phone
+    classes: "govuk-!-width-one-half",
+    value: data.user.phone
   }) }}
