--- a/app/views/auth/check-account.html
+++ b/app/views/auth/check-account.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms.html" %}
+{% extends "_layouts/forms.html" %}
 {% set title %}We’ve found an account that matches your details{% endset %}
 {% set existingEmailExample %}
   {{data.emailExample | maskEmail}}
