--- a/app/views/auth/how-qts.html
+++ b/app/views/auth/how-qts.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms.html" %}
+{% extends "_layouts/forms.html" %}
 {% set title %}Did a university, SCITT or school award your QTS?{% endset %}
 
 {% block form %}
