--- a/app/views/auth/resend-phone.html
+++ b/app/views/auth/resend-phone.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms.html" %}
+{% extends "_layouts/forms.html" %}
 {% set title %}Send new text message{% endset %}
 {% set buttonText = 'Request security code' %}
 
