--- a/app/views/auth/trn.html
+++ b/app/views/auth/trn.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms.html" %}
+{% extends "_layouts/forms.html" %}
 {% set title %}What is your teacher reference number (TRN)?{% endset %}
 
 {% block form %}
