--- a/app/views/qts/personal-information/personal-information-summary.html
+++ b/app/views/qts/personal-information/personal-information-summary.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms-qts.html" %}
+{% extends "_layouts/forms-qts.html" %}
 {% set showSubheader = true %}
 {% set subHeader = 'About you' %}
 {% set signedIn = 'true' %}
