--- a/app/views/qts/personal-information/question-current-legal-name.html
+++ b/app/views/qts/personal-information/question-current-legal-name.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms-qts.html" %}
+{% extends "_layouts/forms-qts.html" %}
 {% set showSubheader = true %}
 {% set subHeader = 'About you' %}
 {% set signedIn = 'true' %}
