--- a/app/views/sign-in/code-type.html
+++ b/app/views/sign-in/code-type.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms.html" %}
+{% extends "_layouts/forms.html" %}
 {% set title %}How do you want get a security code?{% endset %}
 
 
