--- a/app/views/sign-in/email.html
+++ b/app/views/sign-in/email.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms.html" %}
+{% extends "_layouts/forms.html" %}
 {% set title %}Your email address{% endset %}
 {% set emailHint %}Enter the email you used when creating your {{ serviceName }}.{% endset %}
 
