--- a/app/views/sign-in/finish.html
+++ b/app/views/sign-in/finish.html
@@ -1,4 +1,4 @@
-{% extends "layouts/forms-interrupt.html" %}
+{% extends "_layouts/forms-interrupt.html" %}
 {% set title %}You’ve signed in to your {{ serviceName }}{% endset %}
 {% set hideBackLink = true %}
 
