Update deps, add filters, cleanup

--- a/app/views/auth/_email-code.html
+++ b/app/views/auth/_email-code.html
@@ -23,7 +23,7 @@
 </p>
 
 {%- if signIn -%}
-<p>
-  <a href="/sign-in/resend-phone">I can't access this email address</a>
-</p>
+  <p>
+    <a href="/sign-in/resend-phone">I cannot access this email address</a>
+  </p>
 {%- endif -%}
