--- a/app/views/auth/_phone-code.html
+++ b/app/views/auth/_phone-code.html
@@ -14,9 +14,8 @@
     text: "Security code",
     classes: "govuk-label--s"
   },
-  
-  classes: 'govuk-!-width-one-quarter',
-  decorate: 'email-code'
+  name: "temp[phoneCode]",
+  classes: 'govuk-!-width-one-quarter'
 }) }}
 
 {%- if auth or account -%}
