--- a/app/views/auth/_email.html
+++ b/app/views/auth/_email.html
@@ -12,6 +12,7 @@
     hint: {
       html: emailHint
     },
+    classes: 'govuk-!-width-two-thirds',
     value: data['email'] or email
   }) }}
 
