--- a/app/views/auth/_summary-card.html
+++ b/app/views/auth/_summary-card.html
@@ -183,7 +183,8 @@
     actions: {
       items: [{
         text: 'Change',
-        href: "first names"
+        href: "name",
+        visuallyHiddenText: "first names"
       }]
     }
   },
@@ -197,7 +198,8 @@
     actions: {
       items: [{
         text: 'Change',
-        href: "middle names"
+        href: "name",
+        visuallyHiddenText: "middle names"
       }]
     }
   },
@@ -211,7 +213,8 @@
     actions: {
       items: [{
         text: 'Change',
-        href: "last names"
+        href: "name",
+        visuallyHiddenText: "last names"
       }]
     }
   },
@@ -225,7 +228,8 @@
       actions: {
         items: [{
           text: 'Change',
-          href: "date-of-birth"
+          href: "date-of-birth",
+          visuallyHiddenText: "date of birth"
         }]
       }
     },
@@ -240,7 +244,8 @@
     actions: {
       items: [{
         text: 'Change',
-        href: "phone"
+        href: "phone",
+        visuallyHiddenText: "mobile phone"
       }]
     }
   },
@@ -255,7 +260,8 @@
     actions: {
       items: [{
         text: 'Change',
-        href: "email"
+        href: "email",
+        visuallyHiddenText: "email"
       }]
     }
 
