--- a/app/views/index.html
+++ b/app/views/index.html
@@ -34,6 +34,9 @@
   <p>
     <a href="/auth/emails/qts-email">Email - access your QTS cert</a>
   </p>
+  <p>
+    <a href="/invite/98610705-d34c-4282-8480-45646ed5cfe1">New invite link</a>
+  </p>
   <p class="govuk-hint">Password for qual service (qs)</p>
 
   <p class="govuk-heading-s">Qualifications service (TSSP Replacement)</p>
