--- a/app/views/auth/_finish.html
+++ b/app/views/auth/_finish.html
@@ -3,13 +3,13 @@
   {%- if data['dqt-check'] == 'found' and  data['signIn'] != 'true' -%}
   <!-- A DQT record has been found - user creates account - accesses service -->
   <p>We’ve found your details in our records and linked them to your {{ serviceName }}.</p>
-  <p>Next time, you can sign in just using your email ({{ data.email or 'email@example.com' }}).</p>
+  <p>Next time, you can sign in just using your email ({{ data.user.email or data.defaultData.email }}).</p>
   <p class="govuk-!-margin-bottom-6">Continue to <strong>{{ data.onwardContinue or data.qs }}</strong>. </p>
 
   {%- elseif data['dqt-check'] == 'pending-npq' -%}
   <!-- A DQT record has been found - user creates account - accesses service -->
   <p>We could not find your details in our records. Our support staff may get in touch to ask for more information. This is so we can link your existing details to your DfE Identity account.</p>
-  <p>Next time, you can sign in just using your email ({{ data.email or 'email@example.com' }}).</p>
+  <p>Next time, you can sign in just using your email ({{ data.user.email or data.defaultData.email }}).</p>
   <p class="govuk-!-margin-bottom-6">Continue to <strong>{{ data.onwardContinue or data.qs }}</strong>. </p>
 
   
@@ -34,11 +34,11 @@
   {%- elseif not data['dqt-check'] or data['dqt-check'] == 'auth' or data['signIn'] == 'true' -%}
   <!-- basic auth journey - no DQT checks made -->
     {%- if auth -%}
-    <p>Next time, you can sign in just using your email ({{ data.email or 'email@example.com' }}).</p>
+    <p>Next time, you can sign in just using your email ({{ data.user.email or data.defaultData.email }}).</p>
     {%- endif -%}
 
     {%- if data['matchAccount'] == 'true' -%}
-        <p>Next time, sign into your account using ({{ data.email or 'email@example.com' }}).  </p>
+        <p>Next time, sign into your account using ({{ data.user.email or data.defaultData.email }}).  </p>
     {%- endif -%}
 
 
