--- a/app/views/auth/_email-code.html
+++ b/app/views/auth/_email-code.html
@@ -1,8 +1,8 @@
 {% set email %}
   {%- if data['matchAccountEmail'] == 'true' -%}
-    {{data.email | maskEmail}}
+    {{data.user.email | maskEmail}}
   {%- else -%}
-    {{ data.email or 'email@example.com' }}
+    {{ data.user.email or data.defaultData.email }}
   {%- endif -%}
 {% endset %}
 
