--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -1,4 +1,5 @@
 
+// @import "node_modules/govuk-frontend/govuk/settings/all";
 
 // Patterns that aren't in Frontend
 @import "patterns/contents-list";
@@ -10,6 +11,11 @@
 @import "patterns/_email";
 @import "patterns/button";
 @import "govuk-page-masthead";
+
+.example {
+  @include govuk-text-colour;
+}
+
 
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
 .secondary-button {
