Get conditional page working

--- a/app/views/_layouts/main.html
+++ b/app/views/_layouts/main.html
@@ -57,9 +57,13 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
           text: "Manage your prototype"
         },
         {
-          href: "/manage-prototype/clear-data",
+          href: "/clear",
           text: "Clear data"
         },
+        {
+          href: "/manage-prototype/clear-data",
+          text: "Clear data"
+        } if false,
         {
           href: "/settings",
           text: "settings"
