--- a/app/views/auth/evidence-needed.html
+++ b/app/views/auth/evidence-needed.html
@@ -4,43 +4,6 @@
 
 {% block form %}
 
-<p class="govuk-body">You need to provide evidence because this is the name that will be on your teaching certificates.</p>
-
-
-<p class="govuk-body">You’ll need to upload a scan of 1 of the following:</p>
-<ul class="govuk-list govuk-list--bullet">
-  <li>birth certificate</li>
-  <li>civil partnership certificate</li>
-  <li>decree absolute</li>
-  <li>deed poll</li>
-  <li>marriage certificate</li>
-  <li>passport</li>
-  <li>statutory declaration</li>
-</ul>
-
-<p class="govuk-body">Changes can take up to 5 days.</p>
-
-{{ govukRadios({
-  name: "user[provideEvidence]",
-  fieldset: {
-    legend: {
-      text: "Do you want to upload your evidence now?",
-      isPageHeading: false,
-      classes: "govuk-fieldset__legend--m"
-    }
-  },
-  items: [
-    {
-      value: "yes",
-      text: "Yes"
-    },
-    {
-      value: "no",
-      text: "No"
-    }
-  ],
-  value: data.user.provideEvidence
-}) }}
-
+  {% include "_includes/forms/evidence-needed.html" %}
 
 {% endblock %}
