--- a/app/views/auth/_name.html
+++ b/app/views/auth/_name.html
@@ -36,7 +36,7 @@
 
 {{ govukInput({
   id: "lastNames",
-  name: "[lastNames]",
+  name: "user[lastNames]",
   hint: {
     text: "Or family names"
   },
