--- a/app/views/auth/_summary-card.html
+++ b/app/views/auth/_summary-card.html
@@ -161,11 +161,11 @@
 }) if data['emailAuth'] != 'true' }}
 
 <p class="govuk-body">
-  Change any details that are incorrect. For some name changes you’ll need to provide evidence, for example, change of last name due to marriage.
+  Check the details we have you from your DfE teacher record.
 </p>
 
 <p class="govuk-body">
-  You’ll need to provide evidence for changes to your date of birth.
+  You’ll need to provide evidence for some name changes and all date of birth changes. 
 </p>
 
 {% set middleNamesHtml %}
