--- a/app/views/auth/evidence-in-review.html
+++ b/app/views/auth/evidence-in-review.html
@@ -1,11 +1,14 @@
 {% extends "_layouts/forms.html" %}
-{% set title %}We’re reviewing your evidence{% endset %}
+{% set title %}We’ll review your evidence{% endset %}
 
 
 {% block form %}
 
   <p class="govuk-body">
-    It can take 5 days for your evidence to be reviewed. We’ll send you an email when it’s done.
+    We usually take up to 5 working days to approve changes.
   </p>
 
+  <p class="govuk-body">
+    We’ll send you an email once we’ve approved the changes and you can view them in your DfE Identity account.
+  </p>
 {% endblock %}
