--- a/app/views/auth/finish.html
+++ b/app/views/auth/finish.html
@@ -3,6 +3,8 @@
 {% set auth = true %}
 {% set hideButton = true %}
 
+{% set formAction = data.returnToService %}
+
 <!-- title of page scenarios  -->
 {% set title %}
   {%- if data['dqt-check'] == 'found' -%}
