--- a/app/views/_includes/forms/evidence-needed.html
+++ b/app/views/_includes/forms/evidence-needed.html
@@ -1,19 +1,25 @@
 
-<p class="govuk-body">You need to provide evidence because this is the name that will be on your teaching certificates.</p>
+
+<p class="govuk-body">You’ll need to upload a photo or scan of 1 of the following:</p>
 
 
-<p class="govuk-body">You’ll need to upload a scan of 1 of the following:</p>
 <ul class="govuk-list govuk-list--bullet">
-  <li>birth certificate</li>
-  <li>civil partnership certificate</li>
-  <li>decree absolute</li>
-  <li>deed poll</li>
-  <li>marriage certificate</li>
-  <li>passport</li>
-  <li>statutory declaration</li>
+  {% if dateOfBirthChanged and not nameChanged %}
+    <li>birth certificate</li>
+    <li>driving licence</li>
+    <li>passport</li>
+  {% else %}
+    <li>civil partnership certificate</li>
+    <li>decree absolute</li>
+    <li>deed poll</li>
+    <li>marriage certificate</li>
+    <li>passport</li>
+    <li>statutory declaration</li>
+  {% endif %}
+
 </ul>
 
-<p class="govuk-body">Changes can take up to 5 days.</p>
+<p class="govuk-body">Changes can take up to 5 working days to be approved.</p>
 
 {{ govukRadios({
   name: "user[provideEvidence]",
@@ -31,7 +37,10 @@
     },
     {
       value: "no",
-      text: "No"
+      text: "No, I’ll do it at a later date",
+      hint: {
+        text: "We’ll send an email to remind you"
+      }
     }
   ],
   value: data.user.provideEvidence
