Add extra updates

--- a/app/views/auth/evidence-later.html
+++ b/app/views/auth/evidence-later.html
@@ -5,7 +5,9 @@
 {% block form %}
 
   <p class="govuk-body">
-    We’ll send you a reminder email to remind you to send us your evidence. Until you send us your evidence, your previous details will show.
+    We’ll send you an email to remind you to upload your evidence.
   </p>
+
+  <p class="govuk-body">We’ll only make changes to your name or date of birth once you’ve provided evidence. Until then, your current details will be displayed in your DfE Identity account.</p>
 
 {% endblock %}
