Updates, including disabling browser autofil on phone number for UR

--- a/app/views/_includes/forms/evidence-needed.html
+++ b/app/views/_includes/forms/evidence-needed.html
@@ -9,8 +9,10 @@
     <li>driving licence</li>
     <li>passport</li>
   {% else %}
+    <li>birth certificate</li>
     <li>civil partnership certificate</li>
     <li>decree absolute</li>
+    <li>driving licence</li>
     <li>deed poll</li>
     <li>marriage certificate</li>
     <li>passport</li>
