Disable browser autofil on email for UR purposes

--- a/app/views/auth/_email.html
+++ b/app/views/auth/_email.html
@@ -5,6 +5,8 @@
       text: "",
       classes: "govuk-label--s "
     },
+    type: "email",
+    autocomplete: "off",
     errorMessage: {
       text: data['errorMessageCopy']
     } if data['errorMessage'] == 'true'
