update privacy notice content
Updates the content for the DfE Identity account privacy notice

--- a/app/views/_layouts/main.html
+++ b/app/views/_layouts/main.html
@@ -30,7 +30,7 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
         href: accountLink,
         html: data['tsa'],
         active: true if account == 'true'
-      },      
+      },
       {
         href: "/user-research/qts/sign-out",
         text: "Sign out"
@@ -50,7 +50,7 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
       },
       {
         href: "/legal/privacy-notice",
-        text: "Privacy notice"
+        text: "Privacy"
       },
         {
           href: "/manage-prototype",
@@ -75,7 +75,7 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
       ]
     }
   }) }}
-  
+
 {{ data | log }}
 
 {% endblock %}
