--- a/app/views/legal/privacy-notice.html
+++ b/app/views/legal/privacy-notice.html
@@ -68,9 +68,9 @@
 
 <h2 class="govuk-heading-m">Get help</h2>
 
-<p><a href=https://form.education.gov.uk/en/AchieveForms/?form_uri=sandbox-publish://AF-Process-f1453496-7d8a-463f-9f33-1da2ac47ed76/AF-Stage-1e64d4cc-25fb-499a-a8d7-74e98203ac00/definition.json&redirectlink=%2Fen&cancelRedirectLink=%2Fen>Contact the Department for Education</a> if you want to ask us to remove your data or you want access to the data we have about you.</p>
+<p><a href=“https://form.education.gov.uk/en/AchieveForms/?form_uri=sandbox-publish://AF-Process-f1453496-7d8a-463f-9f33-1da2ac47ed76/AF-Stage-1e64d4cc-25fb-499a-a8d7-74e98203ac00/definition.json&redirectlink=%2Fen&cancelRedirectLink=%2Fen”>Contact the Department for Education</a> if you want to ask us to remove your data or you want access to the data we have about you.</p>
 
-<p>For further information, or to raise a concern, visit the <a href="https://ico.org.uk/">Information Commissioner's Office</a>.</p>
+<p>For further information, or to raise a concern, visit the <a href=“https://ico.org.uk/”>Information Commissioner's Office</a>.</p>
 
 <h2 class="govuk-heading-m">Changes to this privcy notice</h2>
 
