Prompt users to move away from institution email addresses

--- a/app/views/auth/_ga-account.html
+++ b/app/views/auth/_ga-account.html
@@ -14,7 +14,7 @@
     text: 'Create an account',
     classes: "app-button--inverse",
     href: accountPath,
-    href: '/auth/phone'
+    href: '/auth/start'
   }) }}
 
   <h1 class="govuk-heading-m">Already have an account?</h1>
