--- a/app/views/auth/check-answers.html
+++ b/app/views/auth/check-answers.html
@@ -1,6 +1,10 @@
 {% extends "_layouts/forms.html" %}
 {% set title = "Confirm your details" %}
 
+{% set buttonText = "Confirm" %}
+
 {% block form %}
-      {% include '../auth/_summary-card.html' %}
+
+  {% include '../auth/_summary-card.html' %}
+
 {% endblock %}
