--- a/app/views/auth/_institution-email.html
+++ b/app/views/auth/_institution-email.html
@@ -31,7 +31,7 @@ We recommend setting your DfE Identity account up with a personal email address.
   name: "user[changeEmail]",
   fieldset: {
     legend: {
-      text: "Which email address would you like use for your DfE Identity account?",
+      text: "Which email address would you like to use for your DfE Identity account?",
       isPageHeading: false,
       classes: "govuk-fieldset__legend--s"
     }
