--- a/app/views/_layouts/main.html
+++ b/app/views/_layouts/main.html
@@ -52,6 +52,10 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
         href: "/legal/privacy-notice",
         text: "Privacy"
       },
+      {
+        href: "/legal/accessibility",
+        text: "Accessibility"
+      },
         {
           href: "/manage-prototype",
           text: "Manage your prototype"
