--- a/app/views/legal/privacy-notice.html
+++ b/app/views/legal/privacy-notice.html
@@ -72,7 +72,7 @@
 
 <p>For further information, or to raise a concern, visit the <a href=“https://ico.org.uk/”>Information Commissioner's Office</a>.</p>
 
-<h2 class="govuk-heading-m">Changes to this privcy notice</h2>
+<h2 class="govuk-heading-m">Changes to this privacy notice</h2>
 
 <p>We reserve the right to update this policy at any time.</p>
 
