--- a/app/views/auth/name.html
+++ b/app/views/auth/name.html
@@ -1,5 +1,5 @@
 {% extends "_layouts/forms.html" %}
-{% set title %}Change the name we have for you in our records{% endset %}
+{% set title %}Change your official name on your teacher record{% endset %}
 {% set signedIn = 'false' %}
 
 {% block form %}
