--- a/app/views/auth/preferred-name.html
+++ b/app/views/auth/preferred-name.html
@@ -1,5 +1,5 @@
 {% extends "_layouts/forms.html" %}
-{% set title %}Do you have a preferred name?{% endset %}
+{% set title %}What is your preferred name?{% endset %}
 {% set auth = 'true' %}
 {% set showheader = true %}
 
