--- a/app/views/auth/_summary-card.html
+++ b/app/views/auth/_summary-card.html
@@ -184,7 +184,7 @@
   {% endif %}
 {% endset %}
 
-<h2 class="govuk-heading-m">Personal details</h2>
+<h2 class="govuk-heading-m">Teaching record</h2>
 {{ govukSummaryList({
   classes: "govuk-!-margin-bottom-9",
   titleText: "Personal details",
@@ -236,21 +236,6 @@
   },
   {
     key: {
-      html: 'Preferred name'
-    },
-    value: {
-      html: preferredNameHtml
-    },
-    actions: {
-      items: [{
-        text: 'Change',
-        href: "preferred-name",
-        visuallyHiddenText: "preferredName"
-      }]
-    }
-  },
-  {
-    key: {
       html: 'Date of birth'
     },
     value: {
@@ -268,10 +253,25 @@
 })}}
 
 
-<h2 class="govuk-heading-m">Sign in details</h2>
+<h2 class="govuk-heading-m">Account details</h2>
 {{ govukSummaryList({
   classes: "govuk-!-margin-bottom-9",
   rows: [
+    {
+      key: {
+        html: 'Preferred name'
+      },
+      value: {
+        html: preferredNameHtml
+      },
+      actions: {
+        items: [{
+          text: 'Change',
+          href: "preferred-name",
+          visuallyHiddenText: "preferredName"
+        }]
+      }
+    },
     {
       key: {
         html: 'Email'
