--- a/app/views/auth/_summary-card.html
+++ b/app/views/auth/_summary-card.html
@@ -161,7 +161,7 @@
 }) if data['emailAuth'] != 'true' }}
 
 <p class="govuk-body">
-  Check the details we have for you from your DfE teacher record.
+  Check the details we have for you from your DfE teaching record.
 </p>
 
 <p class="govuk-body">
